--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,16 @@
 /* TODO Add site wide styles */
+body {
+    margin: 0;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#main {
+    width: 100%;
+    max-width: 1240px;
+    align-self: center;
+}
