--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,6 +1,10 @@
 /* TODO Add site wide styles */
+* {
+    font-family: interstate, sans-serif;
+}
 body {
     margin: 0;
+    background-color: #F2F2F2;
 }
 
 #root {
