--- a/react-app/src/components/SongDetail/SongDetail.css
+++ b/react-app/src/components/SongDetail/SongDetail.css
@@ -1,6 +1,7 @@
 .song-detail {
     height: 380px;
-    background-color: #6B6D7A;
+    /* background-color: #6B6D7A; */
+    background: linear-gradient(85deg, #8C5F50, 10%, #5A5560);
     width: 100%;
     display: flex;
     justify-content: space-between;
