i am become death, destroyer of worlds

--- a/react-app/src/components/SongDetail/SongDetail.css
+++ b/react-app/src/components/SongDetail/SongDetail.css
@@ -47,3 +47,9 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.comment-list-item {
+    background-color: purple;
+    width: 70%;
+    height: 170px;
+}
