--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -29,7 +29,7 @@
 }
 
 #modal-content input{
-  width: 100%;
+  width: 94%;
   padding: 12px;
   margin: 10px 0;
   border: 1px solid rgb(133, 133, 133);;
@@ -59,17 +59,17 @@
 }
 
 .button_submit.button_main{
-  background-color: #3F00B7;
+  background-color: #FD5600;
   color:rgba(255, 255, 255, 1);
 }
 
 .button_submit.button_secondary{
-  border: 1px solid #3F00B7;
+  border: 1px solid #FD5600;
 }
 
 .button_submit.button_transfer{
-  /* background-color:#3F00B7; */
-  border: 1px solid #3F00B7;
+  /* background-color:#FD5600; */
+  border: 1px solid #FD5600;
 }
 
 .hrmodal{
