--- a/react-app/src/components/NavBar/FooterPlayer/Footer.css
+++ b/react-app/src/components/NavBar/FooterPlayer/Footer.css
@@ -1,10 +1,11 @@
 .footer {
- box-sizing: border-box;
- position: fixed;
- bottom: 0;
- width: 100%;
+  box-sizing: border-box;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   height: 55px;
   background: white;
+  display:flex;
 }
 
 .footer-hidden {
