--- a/react-app/src/components/NavBar/FooterPlayer/Footer.css
+++ b/react-app/src/components/NavBar/FooterPlayer/Footer.css
@@ -1,11 +1,17 @@
 .footer {
   box-sizing: border-box;
   position: fixed;
+  border: 1px solid rgb(212, 212, 212);
   bottom: 0;
   width: 100%;
   height: 55px;
-  background: white;
   display:flex;
+  z-index: 100;
+}
+
+footer.footer {
+  background-color: white;
+  padding: 0;
 }
 
 .footer-hidden {
