--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -4,6 +4,8 @@
 }
 body {
     margin: 0;
+    margin-bottom: 75px;
+    z-index: 100;
     background-color: #F2F2F2;
 }
 
@@ -17,8 +19,4 @@ body {
     width: 100%;
     max-width: 1240px;
     align-self: center;
-}
-
-body {
-    margin-bottom: 75px;
 }
