--- a/react-app/src/components/DropZone/DropZone.css
+++ b/react-app/src/components/DropZone/DropZone.css
@@ -1,18 +1,20 @@
 .drop_zone {
     height: 500px;
     width: 50%;
-    border: 5px dashed black;
-    background-color: rgba(0, 0, 255, 0.397);
+    border: 1px solid rgb(134, 134, 134);
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 50px auto;
   }
-
-  .drop_zone_submit {
+.drop_zone_submit {
     height: 500px;
-    font-size: 15px;
-    font-weight: bold;
     width: 50%;
-    border: 5px dashed black;
-    background-color: rgba(0, 0, 255, 0.794);
-    text-align: center;
+    border: 1px solid rgb(134, 134, 134);
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 50px auto;
   }
 
   label {
@@ -23,3 +25,23 @@
     width: 200px;
     height: 200px;
   }
+
+#choose-audio-file-button {
+  display:none;
+}
+
+.custom-file-upload {
+  background-color: #FD5600;
+  color: white;
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  height: 20px;
+  width: 50%;
+  align-self: center;
+}
+
+.drop_zone:first-child {
+  align-items: center;
+}
