--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -29,7 +29,7 @@ a:visited {
 
 .nav-right {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 3fr;
     height: 100%;
 }
 
@@ -136,4 +136,12 @@ a:visited {
 
 .open-dropdown-button {
     background-color: #111111;
+}
+
+.github-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: auto;
+    font-size: 13px;
 }
