--- a/react-app/src/components/WaveForm/WaveForm.css
+++ b/react-app/src/components/WaveForm/WaveForm.css
@@ -5,8 +5,12 @@
     height: 45px;
     width: 45px;
     margin: 15px;
+    color: white;
+    box-shadow: 1px 1px 1px rgba(87, 87, 87, 0.849);
 }
 
 .waveform-play:hover {
     cursor: pointer;
+    color: black;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.849);
 }
