--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -29,7 +29,7 @@ a:visited {
 
 .nav-right {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 1fr .25fr;
     height: 100%;
 }
 
