--- a/react-app/src/components/SongDetail/SongDetail.css
+++ b/react-app/src/components/SongDetail/SongDetail.css
@@ -65,6 +65,7 @@
 .delete-comment-button {
     background-color: white;
     border: none;
+    margin-right: 5px;
 }
 
 .delete-comment-button:hover {
@@ -85,5 +86,17 @@
 }
 
 .submit-comment-edit-button:hover {
+    cursor: pointer;
+}
+
+.song-detail-buttons {
+    background-color: #FE5700;
+    border: none;
+    margin: 5px;
+    color: white;
+    border-radius: 3px;
+}
+
+.song-detail-buttons:hover {
     cursor: pointer;
 }
