--- a/react-app/src/components/SongDetail/SongDetail.css
+++ b/react-app/src/components/SongDetail/SongDetail.css
@@ -100,3 +100,17 @@
 .song-detail-buttons:hover {
     cursor: pointer;
 }
+
+.song-detail-player {
+    /* position: relative; */
+    margin-bottom: 20px;
+}
+
+.traveling-comments {
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.397);
+    height: 30px;
+    width: auto;
+    bottom: -239px;
+    z-index: 3;
+}
