--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -76,8 +76,15 @@ a:visited {
     font-size: 14px;
     line-height: 21px;;
 }
-.profile-dropdown {
-    padding: 0;
+
+.profile-dropdown li {
+    width: 100%;
+    margin: 0;
+    border: none;
+    background-color: white;
+    line-height: 27px;
+    font-size: 12px;
+    color: #333333;
 }
 
 #nav-logout {
@@ -85,10 +92,24 @@ a:visited {
     margin: 0;
     border: none;
     background-color: white;
+    line-height: 17px;
+    font-size: 12px;
+    color: #333333;
+    padding-left: 0px;
+    text-align: left;
 }
 
 #nav-logout:hover {
     cursor: pointer;
+}
+
+.logout-icon {
+    margin-right: 5px;
+    margin-left: 0px;
+}
+
+.playlist-icon {
+    margin-right:  5px;
 }
 
 .nav-button:hover {
@@ -102,10 +123,6 @@ a:visited {
 .nav-bar-upload {
     margin: auto;
 }
-/* 
-.nav-bar-songs-button {
-    width: 10%;
-} */
 
 .nav-bar-icon {
     height: 47px;
@@ -118,13 +135,10 @@ a:visited {
     height: 225%
 }
 
-
 .profile-dropdown {
-    display: flex;
-    flex-direction: column;
     position: absolute;
     top: 30px;
-    /* width: fit-content; */
+    width: 75px;
     padding:7px 10px;
     background-color:white;
     list-style-type: none;
@@ -132,6 +146,11 @@ a:visited {
     z-index: 100;
     box-shadow: 0px 8px 20px rgba(110, 110, 110, 0.25);
     border: 1px solid black;
+    color: black;
+}
+
+.profile-icon {
+    margin-right: 6px;
 }
 
 .open-dropdown-button {
@@ -158,7 +177,7 @@ a:visited {
 }
 
 .searchbar {
-    border-radius: 7px;
+    border-radius: 4px;
     line-height: 20px;
     height: 25px;
     width: 100%;
