add progress bar to song loading page

--- a/react-app/src/components/DropZone/DropZone.css
+++ b/react-app/src/components/DropZone/DropZone.css
@@ -168,3 +168,11 @@
   line-height: 20px;
   cursor: pointer;
 }
+
+#bar {
+  width: 1%;
+  height: 30px;
+  background-color: magenta;
+  color: white;
+  font-weight: bold;
+}
