--- a/react-app/src/components/DropZone/DropZone.css
+++ b/react-app/src/components/DropZone/DropZone.css
@@ -108,7 +108,6 @@
 .song-form-content {
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
 }
 
 .song-form-content select {
@@ -169,10 +168,9 @@
   cursor: pointer;
 }
 
-#bar {
-  width: 1%;
-  height: 30px;
-  background-color: magenta;
-  color: white;
-  font-weight: bold;
+.upload-errors {
+  font-size: 12px;
+  color: red;
+  line-height: 17px;
+  height: 20px;
 }
