add search store and backend route

--- a/react-app/src/components/SongDetail/SongDetail.css
+++ b/react-app/src/components/SongDetail/SongDetail.css
@@ -11,6 +11,12 @@
 
 }
 
+.search-form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 .song-detail-album-art {
     width: 340px;
     margin: 20px;
