--- a/react-app/src/components/WaveForm/WaveForm.css
+++ b/react-app/src/components/WaveForm/WaveForm.css
@@ -14,3 +14,8 @@
     color: black;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.849);
 }
+
+.controls-and-title {
+    display: flex;
+    flex-direction: row;
+}
