--- a/react-app/src/components/AddPlaylist/AddPlaylist.css
+++ b/react-app/src/components/AddPlaylist/AddPlaylist.css
@@ -22,6 +22,19 @@
     cursor: pointer;
 }
 
+.playlist-item-div {
+    margin-top: 5px;
+}
+
+
 .button-section {
-    margin-top: 30px;
+    margin: 30px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.add-song-div button {
+    cursor:pointer;
+    border: none;
 }
