--- a/react-app/src/components/MyPlaylists/MyPlaylists.css
+++ b/react-app/src/components/MyPlaylists/MyPlaylists.css
@@ -39,7 +39,7 @@
 .create-playlist-link {
     color: black;
     font-size: 18px;
-    background-color: white;
+    background-color: #E05107;
     display: inline-block;
     padding: 5px;
     border: 1px solid rgba(128, 128, 128, 0.356);
@@ -47,5 +47,5 @@
 }
 
 .create-playlist-link *:hover {
-    color: rgb(161, 161, 161);
+    color: rgb(255, 255, 255);
 }
