--- a/react-app/src/components/WaveForm/WaveForm.css
+++ b/react-app/src/components/WaveForm/WaveForm.css
@@ -42,3 +42,19 @@
     height: 100%;
     margin-bottom: 50px;
 }
+
+.loading-waveform {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    margin-bottom: -55px;
+    margin-left: auto;
+    margin-right: auto;
+    background: #7e7e7e77;
+    border-radius: 3px;
+}
+
+.loading-waveform progress {
+    width: 50%;
+}
